[package]
name = "libdqlite-sys"
version = "0.1.0"
authors = ["Jerome Gravel-Niquet <jeromegn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.2"

[dependencies]
thiserror = "1.0.16"
