[package]
name = "dqlite"
version = "0.1.0"
authors = ["Jerome Gravel-Niquet <jeromegn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsqlite3-sys = { version = "0.18.0" }

[dependencies.libdqlite-sys]
path = "../../"
version = "0.1.0"